added topBar header with branding logo and Navigator holder

--- a/root/index.html
+++ b/root/index.html
@@ -15,6 +15,13 @@
 
 <body>
 <div id="wrapper">
+   <header class="topBar">
+       <div>
+		   <span><img src="images/sharkFin-logo.svg"><i>Save a shark</i></span>
+
+          <nav>Navigation Menu</nav>
+       </div>
+  </header>
   <header>
     <h1>Horn Sharks</h1>
   </header>
