Completed Responsive Navigation Bar/ Hamburger icon for mobile

--- a/root/index.html
+++ b/root/index.html
@@ -18,8 +18,21 @@
    <header class="topBar">
        <div>
 		   <span><img src="images/sharkFin-logo.svg"><i>Save a shark</i></span>
+		   <div id="navigation">
 
-          <nav>Navigation Menu</nav>
+			 <input type="checkbox" id="toggle">
+			 <label for="toggle">Menu</label>
+
+			 <nav class="mainNav">
+				 <ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#" class="active">Horn Sharks</a></li>
+					<li><a href="#">Seven Gill Sharks</a></li>
+					<li><a href="#">Top Sharks</a></li>
+					<li><a href="#">Contact</a></li>
+				 </ul>
+			 </nav>
+           </div> <!-- end of div#navigation -->
        </div>
   </header>
   <header>
