Created main.scss and all organized with subfolders and @imports

--- a/root/index.html
+++ b/root/index.html
@@ -6,11 +6,16 @@
  <!-- need meta viewport for RWD -->
     <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Horn Sharks</title>
+
 <link href='http://fonts.googleapis.com/css?family=Freckle+Face' rel='stylesheet' type='text/css'>
-<link href="css/style.css" rel="stylesheet" type="text/css">
+
+<!-- <link href="css/style.css" rel="stylesheet" type="text/css"> -->
+<link href="css/main.css" rel="stylesheet" type="text/css">
+
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+
 </head>
 
 <body>
